--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 :root{
     --color-white: white;
+    --color-lightgray: lightgray;
+    --color-special-black: rgb(36,39,42);
+    --color-violet: rgb(146,160,220);	
 }
 
 *{
@@ -8,6 +11,9 @@
     box-sizing: border-box;
 }
 
+body{
+    color: var(--color-special-black);
+}
 .container{
     width: 920px;
     margin: auto;
@@ -15,7 +21,7 @@
 }
 
 footer{
-    background-color: black;
+    background-color: var(--color-special-black);
 }
 
 header{
@@ -33,19 +39,25 @@ section{
     padding: 2rem 0;
 }
 
+main section .container .row .col:nth-child(odd){
+    padding-right: 7rem;
+}
+
+main section .container .row .col:nth-child(even){
+    padding-left: 7rem;
+}
+
 footer .container .menu >div{
     background-color: pink;
     padding: 1rem;
 }
 
 footer section .row .col-2{
-    flex-grow: 2;
-    padding: 10rem 0;
+    flex-basis: 0;
 }
 
 footer section .row .col{
     flex-grow: 1;
-    padding: 10rem 0;
 }
 
 footer .container .menu{
@@ -56,11 +68,9 @@ footer .container .menu{
 footer .container{
     padding: 1rem 0;
 }
-
-footer section{
-    padding: 0;
+footer section .row >div:first-child{
+    color: var(--color-white);
 }
-
 
 main .blue .container{
     padding: 0 5rem;
@@ -71,9 +81,16 @@ h1{
     font-size: 3rem;
 }
 
-.green{
-    background-color: green;
-    padding: 10rem;
+h2, h3, h4{
+    padding-bottom: 2rem;
+}
+
+h2{
+    font-size: 2.5rem;
+}
+
+h4{
+    font-size: 1.5rem;
 }
 
 .menu{
@@ -84,6 +101,16 @@ h1{
 
 p{
     padding-bottom: 1rem;
+}
+
+main section .container .row .col >img{
+    width: 35rem;
+}
+
+footer section .container .row .col-2 img{
+    width: 1.5rem;
+    vertical-align: middle;
+    padding-right: .1rem;
 }
 
 .btn{
@@ -98,12 +125,17 @@ p{
 }
 
 .btn-white{
-    background-color: white;
-    color: black;
+    background-color: var(--color-white);
+    color: var(--color-special-black);
 }
 
 .btn-black{
-    background-color: rgb(36,39,42);
+    background-color: var(--color-special-black);
+    color: var(--color-white);
+}
+
+.btn-violet{
+    background-color: var(--color-violet);
     color: var(--color-white);
 }
 
@@ -118,28 +150,32 @@ p{
     padding: 2rem 10rem;
 }
 
+.end-main{
+    text-align: center;
+}
 
 .row{
     display: flex;
 }
 
 .col{
-    padding: 3rem;
-    background-color: aqua;
     flex-grow: 2;
 }
 
 .col-2{
-    padding: 3rem;
-    background-color: pink;
     flex-grow: 1;
 }
 
-.gray{
-    background-color: lightgray;
+.bg-gray{
+    background-color: var(--color-lightgray);
 }
 
 .nav-footer{
     display: flex;
     color: var(--color-white);
+}
+
+.stars{
+    background-image: url(../imgs/stars.svg);
+    background-size: contain;
 }
