--- a/css/lavora-con-noi.css
+++ b/css/lavora-con-noi.css
@@ -85,7 +85,7 @@ p{
 }
 
 main section .container .row .col >img{
-    width: 35rem;
+    width: 100%;
 }
 
 footer  .container .row .col img{
@@ -154,10 +154,12 @@ footer  .container .row .col-2>a{
 
 .col{
     flex-grow: 2;
+    flex-basis: 70%;
 }
 
 .col-2{
     flex-grow: 1;
+    flex-basis: 30%;
 }
 
 .bg-gray{
